--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.1.0",
     "cors": "^2.8.5",
+    "cron": "^3.1.7",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http-status-codes": "^2.3.0",
